# obstacle_detection

./: Makefile  README.txt  main_opengl.cpp  main_raw.cpp
ObstacleDetection/: CMakeLists.txt  CMakeLists.txt~  gradientMap.txt  mainpage.dox  manifest.xml  readme_kinect.txt  readme_ros.txt  readme_ros.txt~
ObstacleDetection/include/: CoordSystemKinect.hpp  Map.hpp
ObstacleDetection/src/: main_opengl.cpp  main_simple.cpp
detection_gl/: gradientMap.txt  main.cpp  obs_det
include/: Map.hpp  libfreenect.hpp
old/: README.md
old/detection_gl/: Makefile  Makefile~  README.txt~  main.cpp~  main_opengl.cpp
old/detection_gl/include/: libfreenect.hpp~
old/detection_raw/: main.cpp  old.txt  old.txt~
